Add 3d visualization for kNN analysis

--- a/config.json
+++ b/config.json
@@ -14,7 +14,8 @@
     },
     "knn": {
         "target_county": "Van Buren",
-        "n_neighbors": 5
+        "n_neighbors": 5,
+        "metrics": ["wetlandd", "pop_d", "roadoverarea"]
     },
     "visualization": {
         "diag_kind": "kde",
