--- a/config.json
+++ b/config.json
@@ -30,7 +30,7 @@
         "highlight_county": "Van Buren",
         "color_scale": "Bluered",
         "show_labels": "next_to_points",
-        "selected_groups": ["Target","Neighbors"]
+        "selected_groups": ["Target", "Neighbors", "Target + Neighbors"]
     },
     "include_columns": ["wetlandd","pop_d","roadoverarea"]
 }
