Fix index misalignment causing NaN values after standardization
**Problem:**
The 'standardize' function did not preserve the original DataFrame's
index when scaling the data.  This caused misalignment when reassigning
'county_nmaes' and 'cost_per_corner' back to the DataFrame, resulting in
NaN values in the 'County' Column.

**Solution:**
Modified the 'standardize' function to retain the original index when
creating the scaled DataFrame.  Specifically, set the 'index' parameter
in the DataFrame constructor to 'df.index' after scaling.  This ensures
that the indices of the standardized DataFrame match the original
DataFrame, preventing misalignment and NaN values.

--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
         "target_county": "Van Buren",
         "n_neighbors": 10,
         "metrics": ["wetlandd", "pop_d", "roadoverarea"],
-        "verbose": false
+        "verbose": true
     },
     "visualization": {
         "diag_kind": "kde",
